messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    app: django-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: django-blue
    spec:
      containers:
        - name: django-app
          image: your-dockerhub-username/django-messaging:2.0
          ports:
            - containerPort: 8000
