messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
  app: django
  version: green

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
